--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@tanstack/react-query": "^5.67.2",
     "antd": "^5.24.3",
+    "axios": "^1.8.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
     "sort-by": "^1.2.0"
