--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.67.2",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
+    "date-fns": "^4.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
